--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is the coperex company",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/JoseArrecis/COPEREX#readme",
   "dependencies": {
     "argon2": "^0.41.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
@@ -27,5 +29,6 @@
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "type": "module"
 }
