--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/JoseArrecis/COPEREX#readme",
   "dependencies": {
     "argon2": "^0.41.1",
+    "coperex": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
